estruturando header mobile

--- a/index.html
+++ b/index.html
@@ -34,13 +34,70 @@
                         <ion-icon name="globe-outline"></ion-icon>
                     </label>
                     <select name="language" id="language">
-                        <option value="EN"></option>
-                        <option value="ES"></option>
+                        <option value="EN">EN</option>
+                        <option value="ES">ES</option>
                     </select>
                 </div>
-
-
             </div>
+
+            <button class="btn btn-primary">Entrar</button>
+
+            <button class="btn-mobile">
+                <ion-icon name="menu-outline"></ion-icon>
+            </button>
+
+            <nav class="navbar">
+
+                <div class="navbar-top">
+                    <a href="index.html">
+                        <img src="assets/img/Inserir um pouquinho de texto (1).png" alt="Logo">
+                    </a>
+
+                    <button class="menu-close">
+                        <ion-icon name="close-outline"></ion-icon>
+                    </button>
+                </div>
+                <ul class="navbar-list">
+                    <li>
+                        <a href="index.html" class="navbar-link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">Filmes</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">Bombando</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">Series</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">Preço</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-social"> 
+                    <li>
+                        <a href="#" class="navbar-social-link"></a>
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-social-link"></a>
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-social-link"></a>
+                        <ion-icon name="logo-youtube"></ion-icon>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-social-link"></a>
+                        <ion-icon name="logo-tiktok"></ion-icon>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-social-link"></a>
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
