--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- header -->
     <header class="header">
         <div class="container">
+            <div class="overlay" data-overlay></div>
             <a href="index.html" class="logo">
                 <img src="assets/img/Inserir um pouquinho de texto (1).png" alt="Netjuju">
             </a>
@@ -38,22 +39,21 @@
                         <option value="ES">ES</option>
                     </select>
                 </div>
+                <button class="btn btn-primary">Entrar</button>
             </div>
 
-            <button class="btn btn-primary">Entrar</button>
-
-            <button class="btn-mobile">
+            <button class="btn-mobile" data-menu-open>
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
 
-            <nav class="navbar">
+            <nav class="navbar" data-navbar>
 
                 <div class="navbar-top">
                     <a href="index.html">
                         <img src="assets/img/Inserir um pouquinho de texto (1).png" alt="Logo">
                     </a>
 
-                    <button class="menu-close">
+                    <button class="menu-close" data-menu-close>
                         <ion-icon name="close-outline"></ion-icon>
                     </button>
                 </div>
@@ -77,24 +77,29 @@
 
                 <ul class="navbar-social"> 
                     <li>
-                        <a href="#" class="navbar-social-link"></a>
+                        <a href="#" class="navbar-social-link">
                         <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar-social-link"></a>
+                        <a href="#" class="navbar-social-link">
                         <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar-social-link"></a>
+                        <a href="#" class="navbar-social-link">
                         <ion-icon name="logo-youtube"></ion-icon>
+                    </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar-social-link"></a>
+                        <a href="#" class="navbar-social-link">
                         <ion-icon name="logo-tiktok"></ion-icon>
+                    </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar-social-link"></a>
+                        <a href="#" class="navbar-social-link">
                         <ion-icon name="logo-twitter"></ion-icon>
+                    </a>
                     </li>
                 </ul>
             </nav>
